--- a/styles.css
+++ b/styles.css
@@ -13,17 +13,17 @@ li {
 }
 
 a {
-	color: #DDA0DD; 
+	color: white;
 }
 
 a:hover, a:focus {
-	color: white;
+	color: #DB7093;
 	text-decoration: none;
 }
 
 
 h1 {
-	color: White;
+	color: white;
 	text-align: center;
 	margin-top: 4%;
 	font-size: 412.5%;
@@ -32,11 +32,11 @@ h1 {
 
 h1 > small {
 	display: block;
-	color: white;
+	color: #DDA0DD;
 }
 
 h2 {
-	font-size: 245%;
+	font-size: 235%;
 	margin-top: 180px;
 }
 
@@ -55,7 +55,7 @@ h4 {
 }
 
 h6 {
-	color: #F0F0F0;
+	color: #DDA0DD;
 }
 
 
@@ -108,7 +108,7 @@ h1 .logo {
 }
 
 #home {
-	background: url("https://secure.static.tumblr.com/bce446ac919e6b5ea207dc9747016a19/zeitnba/NOenump1b/tumblr_static_ezig22hxw4ggo8ggw4w8c000k_640_v2.jpg") no-repeat;
+	background: url("http://media.brainz.org/uploads/2013/07/bioluminescent_jellyfish.jpg") no-repeat;
 	width: 100%;
 	background-size: cover;
 }
@@ -116,7 +116,7 @@ h1 .logo {
 #home nav {
 	margin: 0 auto;
 	width: 700px;
-	padding-top: 80px; 
+	padding-top: 80px;
 }
 
 #home nav ul {
@@ -138,7 +138,7 @@ h1 .logo {
 	top: 0;
 	left: 0;
 	width: 100%;
-	background-color: white;
+	background-color: black;
 	z-index: 999;
 	padding: 0;
 	transition: background-color .8s;
@@ -180,12 +180,12 @@ h1 .logo {
 	border-color: #55acee;
 }
 
-.linkedin {
-	border-color: #0000CD;
+.facebook {
+	border-color: #4169E1;
 }
 
-.freecodecamp {
-	border-color: #9400D3;
+.instagram {
+	border-color: #C71585;
 }
 
 .twitter:hover {
@@ -193,13 +193,13 @@ h1 .logo {
 	transition: background-color .4s;
 }
 
-.linkedin:hover {
-	background-color: #0000CD;
+.facebook:hover {
+	background-color: #4169E1;
 	transition: background-color .4s;
 }
 
-.freecodecamp:hover {
-	background-color: #9400D3;
+.instagram:hover {
+	background-color: #C71585;
 	transition: background-color .4s;
 }
 
@@ -210,7 +210,7 @@ h1 .logo {
 }
 
 #about h2 {
-	color: black;
+	color: Black;
 }
 
 #about h2::after {
@@ -225,7 +225,7 @@ h1 .logo {
 	font-family: 'Brush Script MT', cursive;
 	font-size: 150%;
 	float: right;
-	color: #0d2435;
+	color: #DDA0DD;
 	opacity: .9;
 }
 
@@ -239,16 +239,16 @@ h1 .logo {
 }
 
 #web-development-skills {
-	background-color: #114190;
+	background-color:#DA70D6;
 }
 
 
 #automation-skills {
-	background-color: #e11a61;
+	background-color:#BA55D3 ;
 }
 
 #misc-skills {
-	background-color: #9d1098;
+	background-color: #9932CC;
 }
 
 .skills {
@@ -260,12 +260,12 @@ h1 .logo {
 }
 
 #portfolio {
-	background-color: Black;
+	background-color: black;
 	padding-bottom: 80px;
 }
 
 #portfolio h2 {
-	color: white;
+	color: White;
 	margin-bottom: 140px;
 }
 
@@ -280,7 +280,7 @@ h1 .logo {
 }
 
 #portfolio .heading {
-	color: #DDA0DD;
+	color: #9370DB;
 	padding: 15px;
 	text-align: center;
 	position: absolute;
@@ -289,7 +289,7 @@ h1 .logo {
 }
 
 #portfolio .heading span {
-	color: #635757;
+	color: #DDA0DD;
 	display: block;
 	margin: 40px 0px;
 	font-size: 200%;
@@ -308,7 +308,7 @@ h1 .logo {
 }
 
 #portfolio p {
-	color: white;
+	color: #F0F0F0;
 	/*display: none;*/
 	margin-bottom: 30px;
 	line-height: 230%;
@@ -329,10 +329,10 @@ h1 .logo {
 
 .description .tools li {
 	margin-top: 5px;
-	background-color: #1E90FF;
+	background-color: #4B0082;
 	margin-right: 10px;
 	padding: 10px;
-	color: white;
+	color: #F0F0F0;
 }
 
 #portfolio [class^="col"] section {
@@ -419,7 +419,7 @@ h1 .logo {
 }
 
 #contact h2 {
-	color: black;
+	color: Black;
 }
 
 #contact h2:after {
@@ -432,14 +432,14 @@ h1 .logo {
 
 #contact .form-group label {
 	display: block;
-	color: black;
+	color: Black;
 	font-weight: normal;
 }
 
 #contact .form-group input, #contact .form-group textarea {
 	outline: none;
 	border: 0;
-	border-bottom: 6px solid #DDA0DD;
+	border-bottom: 6px solid #DB7093;
 	padding: 9px;
 	background-color: black;
 	color: white;
@@ -447,16 +447,16 @@ h1 .logo {
 
 #contact .form-group input#emailTXT {
 	width: 75%;
-	border-bottom: 90px solid #e11a61;
+	border-bottom: 6px solid #e11a61;
 }
 
 #contact .form-group input#emailTXT {
-	border-bottom: 6px solid #e11a61;
+	border-bottom: 6px solid #9370DB;
 }
 
 #contact .form-group input#subjectTXT {
 	width: 55%;
-	border-bottom: 6px solid #00BFFF;
+	border-bottom: 6px solid #20B2AA;
 }
 
 #contact .form-group input#messageTXT {
@@ -464,7 +464,7 @@ h1 .logo {
 }
 
 #contact .form-group #messageTXT {
-	border-bottom: 6px solid #F08080;
+	border-bottom: 6px solid #1E90FF	;
 	resize: none;
 }
 
@@ -587,7 +587,8 @@ h1 .logo {
 	#portfolio .description {
 		display: table-footer-group;
 	}
-  #portfolio .heading {
+
+	#portfolio .heading {
 		display: table-header-group;
 		font-size: 180%;
 		text-align: left;
