--- a/styles.css
+++ b/styles.css
@@ -108,7 +108,7 @@ h1 .logo {
 }
 
 #home {
-	background: url("http://media.brainz.org/uploads/2013/07/bioluminescent_jellyfish.jpg") no-repeat;
+	background: url("http://www.themesltd.com/backgrounds/animal/pink_floating_jellyfish.gif") no-repeat;
 	width: 100%;
 	background-size: cover;
 }
